--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
     <!-- Permission to get cache size of other apps -->
     <uses-permission android:name="android.permission.GET_PACKAGE_SIZE" />
 
@@ -252,6 +253,13 @@
             android:theme="@style/AppTheme.Light"
             android:exported="false"/>
 
+        <!-- NEW ACTIVITY FOR HFM MESSENGER DROP -->
+        <activity
+            android:name=".HFMDropActivity"
+            android:label="HFM Messenger Drop"
+            android:theme="@style/AppTheme.Light"
+            android:exported="false"/>
+
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -280,6 +288,17 @@
 
         <service
             android:name=".FileTransferService"
+            android:exported="false"
+            android:foregroundServiceType="dataSync"/>
+
+        <!-- NEW SERVICES FOR HFM MESSENGER DROP -->
+        <service
+            android:name=".SenderService"
+            android:exported="false"
+            android:foregroundServiceType="dataSync"/>
+
+        <service
+            android:name=".DownloadService"
             android:exported="false"
             android:foregroundServiceType="dataSync"/>
 
